fix comment, broken css

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -34,10 +34,13 @@
 
 
 #main {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
   padding: 20px;
+}
+#book-page{
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: stretch;
 }
 #book-card{
   display: flex;
@@ -53,6 +56,9 @@
   background-color: #53ca9c;
 }
 #filters{
+  /*min-height: calc(100% - 268px);*/
+  padding: 20px;
+  border-radius: 8px;
   grid-area: filters;
   flex-basis: 1;
   
@@ -60,16 +66,15 @@
 #books{
   grid-area: books;
   flex-basis: 1;
+  width: 80%;
 }
 #book-list {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  justify-content: stretch;
 }
 
 #book-card {
- 
   min-height: 500px;
 }
 
@@ -79,7 +84,7 @@ img {
 
 }
 
-#search-bar> form {
+#search-bar > form {
   display: flex;
   flex-wrap: nowrap;
   flex-direction: column;
@@ -112,10 +117,17 @@ img {
 .login-content {
   padding: 20px;
 }
-
+#center-card{
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+}
 #book-detail-card {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  max-width: 750px;
 }
 
 #book-detail-content-essentials {
@@ -131,7 +143,32 @@ img {
   border-radius: 8px;
   padding: 20px 20px 20px 20px;
 }
+#login-to-comment{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+}
+#login-to-comment > p {
+  font-size: 1.5rem;
+}
+#comment{
+  margin-top: 10px;
+  padding: 20px;
+  border-radius: 8px;
+  background-color: #6fa3ce38;
+}
+#comment > #comment-header {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: center;
 
+}
+#comment #comment-header #comment-user {
+  display: inline-flex;
+  align-items: center;
+}
 #book-detail-content-text {
   display: flex;
   flex-direction: column;
@@ -157,13 +194,3 @@ footer {
   justify-content: center;
   align-items: center;
 }
-
-/*main {
-  display: flex;
-  max-width: 90%;
-  flex-direction: row;
-  justify-content:flex-start;
-  margin: 0 auto;
-  padding-bottom: 20px;
-}*/
-/**/
